Fix the alignment of the auto grid columns

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -30,6 +30,7 @@ footer {
 .grid {
   display: grid;
   grid-auto-flow: column;
+  grid-auto-columns: 1fr;
   grid-gap: $padding;
 }
 
